add ccBank
