# routers/carbonCalculateRouter.js
@@ -1,10 +1,13 @@
 const Router = require('express').Router()
 const CarbonCalculate = require('../controllers/carbonCalculateCtrl')
 
-Router.post("/addCarbonFood",CarbonCalculate.addCarbonFood)
-Router.get("/getAllCarbonFoodList",CarbonCalculate.getAllCarbonFoodList)
-Router.post("/authAPI",CarbonCalculate.authCarbonInterfaceApi)
+Router.get("/getCCBank",CarbonCalculate.getCCbank)
+Router.get("/publicGetCCBank",CarbonCalculate.publicGetCCbank)
 Router.get("/getVehicle",CarbonCalculate.getVehicle)
+Router.get("/getAllCarbonFoodList",CarbonCalculate.getAllCarbonFoodList)
+
+Router.post("/addCarbonFood",CarbonCalculate.addCarbonFood)
+Router.post("/authAPI",CarbonCalculate.authCarbonInterfaceApi)
 Router.post("/calVehicle",CarbonCalculate.calculateVehicle)
 Router.post("/calFood",CarbonCalculate.calculateFood)
 Router.post("/purchase",CarbonCalculate.purchaseOffset)
